fix netty warnings